fixed spacing in footer

--- a/src/scss/global/_footer.scss
+++ b/src/scss/global/_footer.scss
@@ -18,4 +18,7 @@ footer {
     .row {
         margin-bottom: $grid-gutter-width/2;
     }
+    .brand {
+        font-size: 90%;
+    }
 }
