--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -319,7 +319,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns:                12 !default;
-$grid-gutter-width:           $spacer !default;
+$grid-gutter-width:           $spacer*2 !default;
 
 // Components
 //
